Add gathering send for strict ByteString.
Contributed by Brian Lewis.

--- a/network-bytestring.cabal
+++ b/network-bytestring.cabal
@@ -20,6 +20,7 @@ library
   exposed-modules:  Network.Socket.ByteString
                     Network.Socket.ByteString.Lazy
   other-modules:    Network.Socket.ByteString.Internal
+                    Network.Socket.ByteString.IOVec
 
   if flag(split-base)
     build-depends:  base >= 3 && < 4.1, bytestring
