--- a/network-bytestring.cabal
+++ b/network-bytestring.cabal
@@ -29,4 +29,4 @@ library
   build-depends:    network >= 2.1 && < 2.3
 
   extensions:       CPP, ForeignFunctionInterface
-  ghc-options:      -Wall
+  ghc-options:      -Wall -fwarn-tabs
